; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/tip/libacu/extr_t3000.c_t3000_write.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/tip/libacu/extr_t3000.c_t3000_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VERBOSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*, i32)* @t3000_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @t3000_write(i32 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @tcdrain(i32 %7)
  %9 = call i32 (...) @t3000_nap()
  br label %10

10:                                               ; preds = %21, %3
  %11 = load i32, i32* %6, align 4
  %12 = add nsw i32 %11, -1
  store i32 %12, i32* %6, align 4
  %13 = icmp ne i32 %11, 0
  br i1 %13, label %14, label %24

14:                                               ; preds = %10
  %15 = load i32, i32* %4, align 4
  %16 = load i8*, i8** %5, align 8
  %17 = call i32 @write(i32 %15, i8* %16, i32 1)
  %18 = load i32, i32* %4, align 4
  %19 = call i32 @tcdrain(i32 %18)
  %20 = call i32 (...) @t3000_nap()
  br label %21

21:                                               ; preds = %14
  %22 = load i8*, i8** %5, align 8
  %23 = getelementptr inbounds i8, i8* %22, i32 1
  store i8* %23, i8** %5, align 8
  br label %10

24:                                               ; preds = %10
  ret void
}

declare dso_local i32 @tcdrain(i32) #1

declare dso_local i32 @t3000_nap(...) #1

declare dso_local i32 @write(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
